force-app/main/default/objects/ContractLineItem/ContractLineItem.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>