force-app/main/default/objects/ContractLineItem/fields/ServicePlanProductId_c__c.field-meta.xml
<CustomField>
    <fullName>ServicePlanProductId_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Plan Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>