force-app/main/default/objects/ContractLineItem/fields/SVMXA360__ExpectedCost__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpectedCost__c</fullName>
    <description>Indicates expected cost for the Contract Line.</description>
    <label>Expected Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>