force-app/main/default/objects/ContractLineItem/validationRules/OneAssetPerContractLineItem.validationRule-meta.xml
<ValidationRule>
    <fullName>OneAssetPerContractLineItem</fullName>
    <active>false</active>
    <description>ADO User Story # 12319
This validation rule is checking that there should be only one asset per contract line item</description>
    <errorConditionFormula>NOT(ISBLANK( AssetId )) &amp;&amp; NOT(ISBLANK(PRIORVALUE( AssetId )))</errorConditionFormula>
    <errorMessage>A Contract Line Item can only be associated with one asset.</errorMessage>
</ValidationRule>