force-app/main/default/objects/ContractLineItem/validationRules/SVMXA360__A360_Start_and_End_date_integrity_check.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXA360__A360_Start_and_End_date_integrity_check</fullName>
    <active>true</active>
    <description>The start and end date should be within the start and end date of the Service Contract.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(ServiceContractId)),
  OR(
    AND(
      NOT(ISBLANK(StartDate)),
      NOT(ISBLANK(ServiceContract.StartDate)),
      StartDate &lt; ServiceContract.StartDate
    ),
    AND(
      NOT(ISBLANK(EndDate)),
      NOT(ISBLANK(ServiceContract.EndDate)),
      EndDate &gt; ServiceContract.EndDate 
    )
  )
)</errorConditionFormula>
    <errorMessage>The start and end date should be within the start and end date of the Service Contract</errorMessage>
</ValidationRule>